# COMP465_Project

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Entity.h  EntityDatabase.h  Frame.h  GameState.h  Instance.h  Mesh.cpp  Mesh.h  MissileSystem.h  Model.cpp  Model.h  README.md  RenderSystem.cpp  RenderSystem.h  SiloSystem.cpp  SiloSystem.h  Texture.cpp  Texture.h  TutorialConfig.h  buildconf.h.in  main.cpp  shaders.cpp  shaders.h  shared.h.in
images/: starfield_1.raw  starfield_2.raw  starfield_3.raw  starfield_4.raw  starfield_5.raw  starfield_6.raw  starfield_7.raw  starfield_8.raw  starfield_9.raw
models/: Duo.tri  Primus.tri  Ruber.tri  Secundus.tri  Unum.tri  debug.tri  duo.tri  missile.tri  primus.tri  rocket.tri  ruber.tri  secundus.tri  ship.tri  silo-smaller.tri  silo.tri  skybox.tri  unum.tri
models/assets/: duo.ac  missile.ac  primus.ac  ruber.ac  secundus.ac  ship.ac  silo.ac  unum.ac
shaders/: fragment.glsl  skybox-fragment.glsl  skybox-vertex.glsl  vertex.glsl
util/: debug.cpp  debug.h
